NetBSD Problem Report #39325

From spz@NetBSD.org  Sat Aug  9 11:07:17 2008
Return-Path: <spz@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 5508A63BB81
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  9 Aug 2008 11:07:17 +0000 (UTC)
Message-Id: <20080809110715.85F021E4DCBE@build.netbsd.org>
Date: Sat,  9 Aug 2008 11:07:15 +0000 (UTC)
From: spz@NetBSD.org
Reply-To: spz@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: panic in pool_get
X-Send-Pr-Version: 3.95

>Number:         39325
>Category:       kern
>Synopsis:       fatal protection fault in supervisor mode from pool_get
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Aug 09 11:10:00 +0000 2008
>Closed-Date:    Sun Nov 01 21:12:18 +0000 2009
>Last-Modified:  Sun Nov 15 05:50:07 +0000 2009
>Originator:     S.P.Zeidler
>Release:        NetBSD 4.99.71
>Organization:
	TNF
>Environment:


System: NetBSD b2.netbsd.org 4.99.71 NetBSD 4.99.71 (FAITH) #0: Wed Jul 30 06:25:19 UTC 2008 spz@ADMIN:/chroots/current-src/amd64/obj/sys/arch/amd64/compile/FAITH amd64
Architecture: x86_64
Machine: amd64

>Description:

fatal protection fault in supervisor mode
trap type 4 code 0 rip ffffffff802f480b cs 8 rflags 10246 cr2  7f7ffdff5000 cpl 7 rsp ffff800047e18958
kernel: protection fault trap, code=0
Stopped in pid 0.2 (system) at  netbsd:pool_get+0x16b:  movq    0x30(%rsi),%r12
db{0}> bt
pool_get() at netbsd:pool_get+0x16b
rnd_sample_allocate_isr() at netbsd:rnd_sample_allocate_isr+0x31
rnd_add_uint32() at netbsd:rnd_add_uint32+0x15b
wddone() at netbsd:wddone+0x89
wdc_ata_bio_done() at netbsd:wdc_ata_bio_done+0x9e
wdc_ata_bio_intr() at netbsd:wdc_ata_bio_intr+0x1df
wdcintr() at netbsd:wdcintr+0xd7
pciide_pci_intr() at netbsd:pciide_pci_intr+0x52
intr_biglock_wrapper() at netbsd:intr_biglock_wrapper+0x1d
Xintr_ioapic_level2() at netbsd:Xintr_ioapic_level2+0xf7
--- interrupt ---
x86_mwait() at netbsd:x86_mwait+0xd
idle_loop() at netbsd:idle_loop+0xe9
db{0}> mach cpu
addr            dev     id      flags   ipis    curlwp          fpcurlwp
0xffffffff80793fc0      cpu0    0       3009    0       0xffff80004748cba0      0
xffff8000560e9420
0xffff80000402b000      cpu1    1       f002    0       0xffff80004a1dd800             0
x0
db{0}> sh reg
ds          0x89a8
es          0xff60
fs          0x6fc8
gs          0xff60
rdi         0xffffffff808335d2  rnd_mempool+0xb2
rsi         0xed1a45c2e04bc7d0
rbp         0xffff800047e18978
rbx         0xffffffff80833520  rnd_mempool
rdx         0
rcx         0xffffffff80793fc0  cpu_info_primary
rax         0x3
r8          0xffff800003fe3860
r9          0x60
r10         0
r11         0xffffffff80369d90  _bus_dmamap_unload
r12         0
r13         0xffffffff808335d0  rnd_mempool+0xb0
r14         0xfdcb440
r15         0xffff8000040be8f8
rip         0xffffffff802f480b  pool_get+0x16b
cs          0x8
rflags      0x10246
rsp         0xffff800047e18958
ss          0x10
netbsd:pool_get+0x16b:  movq    0x30(%rsi),%r12
db{0}> mach cpu 1
using CPU 1
db{0}> bt
_kernel_lock() at netbsd:_kernel_lock+0xc7
cdev_open() at netbsd:cdev_open+0x8d
spec_open() at netbsd:spec_open+0x15e
VOP_OPEN() at netbsd:VOP_OPEN+0x62
vn_open() at netbsd:vn_open+0x13d
sys_open() at netbsd:sys_open+0xeb
syscall() at netbsd:syscall+0x9a
db{0}> sh reg
ds          0
es          0
fs          0
gs          0
rdi         0
rsi         0x402
rbp         0xffff800049c7b930
rbx         0
rdx         0x6
rcx         0
rax         0
r8          0
r9          0
r10         0
r11         0xffff800049f49900
r12         0xffff80000402b000
r13         0x1
r14         0xffff80004a1dd800
r15         0
rip         0xffffffff802cb837  _kernel_lock+0xc7
cs          0x8
rflags      0x246
rsp         0xffff800049c7b8f0
ss          0x10
netbsd:_kernel_lock+0xc7:       movzbl  0x569202(%rip),%eax
db{0}> sh uvm
Current UVM status:
  pagesize=4096 (0x1000), pagemask=0xfff, pageshift=12
  505554 VM pages: 160769 active, 49288 inactive, 1750 wired, 195909 free
  pages  13390 anon, 195474 file, 2945 exec
  freemin=64, free-target=85, wired-max=168518
  faults=605816035, traps=609327459, intrs=57998669, ctxswitch=366801788
  softint=163751041, syscalls=-832418384, swapins=19509, swapouts=19524
  fault counts:
    noram=193, noanon=0, pgwait=0, pgrele=0
    ok relocks(total)=1227173(1227175), anget(retrys)=231254772(0), amapcopy=312
651765
    neighbor anon/obj pg=221004041/903109027, gets(lock/unlock)=1287950792/12271
60
    cases: anon=155121761, anoncow=66868805, obj=1045020574, prcopy=242931012, p
rzero=-966269572
  daemon and swap counts:
    woke=84050, revs=82895, scans=24342866, obscans=23467335, anscans=0
    busy=0, freed=23467335, reactivate=11345, deactivate=29956532
    pageouts=0, pending=0, nswget=0
    nswapdev=1, swpgavail=65535
    swpages=65535, swpginuse=0, swpgonly=0, paging=0
db{0}> sh pool
fatal page fault in supervisor mode
trap type 6 code 0 rip ffffffff802f3c63 cs 8 rflags 10246 cr2  39 cpl 8 rsp ffff800047e18480
kernel: page fault trap, code=0
Faulted in DDB; continuing...

Things of note about the system: currently running a RAID with one disk failed.
The exact source tree the system was built with is no longer available, but the kernel build directory is.

>How-To-Repeat:
	trying to avoid doing that :-P
>Fix:

>Release-Note:

>Audit-Trail:

From: Mindaugas Rasiukevicius <rmind@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39325 CVS commit: src/sys/dev
Date: Sun, 1 Nov 2009 21:08:32 +0000

 Module Name:	src
 Committed By:	rmind
 Date:		Sun Nov  1 21:08:32 UTC 2009

 Modified Files:
 	src/sys/dev: rnd.c

 Log Message:
 rnd_sample_allocate_isr: pass correct flag to pool_get().
 Should fix PR/39325.


 To generate a diff of this commit:
 cvs rdiff -u -r1.76 -r1.77 src/sys/dev/rnd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Sun, 01 Nov 2009 21:12:18 +0000
State-Changed-Why:
Should be fixed.


From: Manuel Bouyer <bouyer@antioche.eu.org>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@NetBSD.org, netbsd-bugs@NetBSD.org, gnats-admin@NetBSD.org,
        rmind@NetBSD.org, spz@NetBSD.org
Subject: Re: kern/39325 (fatal protection fault in supervisor mode from pool_get)
Date: Sun, 1 Nov 2009 23:09:17 +0100

 On Sun, Nov 01, 2009 at 09:12:21PM +0000, rmind@NetBSD.org wrote:
 > Synopsis: fatal protection fault in supervisor mode from pool_get
 > 
 > State-Changed-From-To: open->closed
 > State-Changed-By: rmind@NetBSD.org
 > State-Changed-When: Sun, 01 Nov 2009 21:12:18 +0000
 > State-Changed-Why:
 > Should be fixed.

 please reqest a pullup to netbsd-5

 -- 
 Manuel Bouyer <bouyer@antioche.eu.org>
      NetBSD: 26 ans d'experience feront toujours la difference
 --

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39325 CVS commit: [netbsd-5] src/sys/dev
Date: Sun, 15 Nov 2009 05:46:24 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sun Nov 15 05:46:23 UTC 2009

 Modified Files:
 	src/sys/dev [netbsd-5]: rnd.c

 Log Message:
 Pull up following revision(s) (requested by rmind in ticket #1135):
 	sys/dev/rnd.c: revision 1.77
 rnd_sample_allocate_isr: pass correct flag to pool_get().
 Should fix PR/39325.


 To generate a diff of this commit:
 cvs rdiff -u -r1.71.4.1 -r1.71.4.2 src/sys/dev/rnd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39325 CVS commit: [netbsd-5-0] src/sys/dev
Date: Sun, 15 Nov 2009 05:46:53 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sun Nov 15 05:46:53 UTC 2009

 Modified Files:
 	src/sys/dev [netbsd-5-0]: rnd.c

 Log Message:
 Pull up following revision(s) (requested by rmind in ticket #1135):
 	sys/dev/rnd.c: revision 1.77
 rnd_sample_allocate_isr: pass correct flag to pool_get().
 Should fix PR/39325.


 To generate a diff of this commit:
 cvs rdiff -u -r1.71.10.1 -r1.71.10.2 src/sys/dev/rnd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:
 	Jul 30 ~5:00 UTC

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.