rnd_sample_allocate_isr: pass correct flag to pool_get(). Should fix PR/39325.