sys/dev/rnd.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: rnd.c,v 1.76 2009/09/14 09:26:28 pooka Exp $	*/
+/*	$NetBSD: rnd.c,v 1.77 2009/11/01 21:08:32 rmind Exp $	*/
 
 /*-
  * Copyright (c) 1997 The NetBSD Foundation, Inc.
@@ -31,7 +31,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: rnd.c,v 1.76 2009/09/14 09:26:28 pooka Exp $");
+__KERNEL_RCSID(0, "$NetBSD: rnd.c,v 1.77 2009/11/01 21:08:32 rmind Exp $");
 
 #include <sys/param.h>
 #include <sys/ioctl.h>
@@ -801,7 +801,7 @@ rnd_sample_allocate_isr(rndsource_t *source)
 {
 	rnd_sample_t *c;
 
-	c = pool_get(&rnd_mempool, 0);
+	c = pool_get(&rnd_mempool, PR_NOWAIT);
 	if (c == NULL)
 		return (NULL);
 
